--- a/app/javascript/app/modules/eminentHome/pages/slotting/comoponent/slottingassignbtnsidebar.css
+++ b/app/javascript/app/modules/eminentHome/pages/slotting/comoponent/slottingassignbtnsidebar.css
@@ -69,3 +69,10 @@ button.savebtn, button.savebtn:hover{
 .vacancytostate .css-11xur9t-MuiPaper-root-MuiTableContainer-root {
     max-height: 260px;
 }
+.slottingassigntable.css-11xur9t-MuiPaper-root-MuiTableContainer-root {
+    box-shadow: none !important;
+    background: #fff;
+    border-bottom: 1px dashed #8C8989;
+    max-height: 100% !important;
+    overflow: initial;
+}
