'tabs implement as permission based'

--- a/app/javascript/app/modules/eminentpersonalityhome/eminentforms/allfroms.scss
+++ b/app/javascript/app/modules/eminentpersonalityhome/eminentforms/allfroms.scss
@@ -688,3 +688,10 @@ margin-bottom: auto;
 .max-wid {
   //max-width: 60rem;
 }
+.report-date-picker-container {
+  margin-top: -0.5rem !important;
+}
+.components-dropdown .css-154xyx0-MuiInputBase-root-MuiOutlinedInput-root {
+  height: 3.3rem;
+  margin-top: 9px;
+}
