'allotted eminent api implemented'

--- a/app/javascript/app/modules/eminentHome/pages/verticalStepper/verticalStepper.scss
+++ b/app/javascript/app/modules/eminentHome/pages/verticalStepper/verticalStepper.scss
@@ -1,5 +1,6 @@
 .vertical-stepper-container {
     background: rgb(13, 202, 240,0.05) !important;
+    padding: 1rem;
     width: 99% !important;
     margin-left: 1rem !important;
     margin-top: 1rem;
