--- a/app/javascript/app/modules/eminentlogin/loginpage.scss
+++ b/app/javascript/app/modules/eminentlogin/loginpage.scss
@@ -19,3 +19,29 @@
   height: 100vh !important;
   overflow-y: clip;
 }
+.otpBtn, .otpBtn:hover{
+  background: #FF9559;
+  color: #FFF;
+  font-size: 20px;
+  border-radius: 16px;
+  padding: 1rem;
+  font-weight: 600;
+}
+login-form h2 {
+  margin: 6rem 0;
+  font-size: 48px;
+  font-style: normal;
+  font-weight: 600;
+}
+.login-form-wrap {
+  border-radius: 24px;
+  border: 1px solid #FF9559;
+  background: #FFF;
+  padding: 2rem 3rem;
+}
+.login-form-wrap h4{
+  font-size: 32px;
+  font-style: normal;
+  font-weight: 600;
+  margin-bottom: 4rem;
+}
