--- a/app/javascript/app/modules/eminentlogin/loginpage.scss
+++ b/app/javascript/app/modules/eminentlogin/loginpage.scss
@@ -43,5 +43,35 @@ login-form h2 {
   font-size: 32px;
   font-style: normal;
   font-weight: 600;
-  margin-bottom: 4rem;
+  margin-bottom: 3rem;
+  margin-left: 0.6rem;
+}
+.opt-flields > div{
+  justify-content: space-between;
+}
+.opt-flields input {
+  width: 3rem !important;
+  height: 3rem;
+  border: 1px solid rgba(0, 0, 0, 0.3);
+  margin-top: 0.5rem;
+  border-radius: 12px;
+}
+.resend-button button, .resend-button button:hover{
+  color: #000;
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 27.179px;
+  text-decoration-line: underline;
+  text-transform: capitalize;
+  background:transparent;
+  border:none;
+}
+.css-1jy569b-MuiFormLabel-root-MuiInputLabel-root.Mui-focused, .css-1jy569b-MuiFormLabel-root-MuiInputLabel-root{
+  color: #7C7C7C !important;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 27.179px;
+  background:#fff;
+  padding: 0 0.5rem;
 }
