--- a/app/javascript/app/modules/eminentlogin/loginpage.scss
+++ b/app/javascript/app/modules/eminentlogin/loginpage.scss
@@ -27,12 +27,13 @@
   padding: 1rem;
   font-weight: 600;
 }
-login-form h2 {
-  margin: 6rem 0;
-  font-size: 48px;
+.login-form h2 {
   font-style: normal;
   font-weight: 600;
+  font-size: 3.5rem;
+  margin-bottom: 3rem !important;
 }
+
 .login-form-wrap {
   border-radius: 24px;
   border: 1px solid #FF9559;
