--- a/app/javascript/app/modules/eminentHome/pages/allotment/components/assign/allotAssign.css
+++ b/app/javascript/app/modules/eminentHome/pages/allotment/components/assign/allotAssign.css
@@ -524,3 +524,9 @@
 .frame-icon-allotment {
   color: #ff9559 !important;
 }
+
+.note-allotment-div {
+  margin-top: 55px;
+  font-weight: 500;
+  font-size: larger;
+}
