Allotment bugs fixed

--- a/app/javascript/app/modules/eminentHome/pages/allotment/components/assign/allotAssign.css
+++ b/app/javascript/app/modules/eminentHome/pages/allotment/components/assign/allotAssign.css
@@ -409,10 +409,9 @@
 
 .textarea-div {
   border: 1px solid #d9d3d3;
-  height: 70px;
   border-radius: 10px;
-  display: flex;
   align-items: center;
+  padding: 12px;
 }
 
 .Remark-div {
