--- a/app/javascript/app/modules/eminentHome/pages/fileStatus/fileStatus.scss
+++ b/app/javascript/app/modules/eminentHome/pages/fileStatus/fileStatus.scss
@@ -167,14 +167,28 @@ $whiteColor:#fff;
   margin-bottom: 0.5rem !important;
 }
 
-.eminent-ministry-container {
+//.eminent-ministry-container {
+//  min-width: 14rem !important;
+//}
+//
+//.eminent-psu-container {
+//  min-width: 14rem !important;
+//}
+//
+//.eminent-type-container {
+//  min-width: 14rem !important;
+//}
+
+.eminent-container-max-wid {
   min-width: 16rem !important;
 }
 
-.eminent-psu-container {
-  min-width: 16rem !important;
+.fw-weight {
+  font-weight: 600!important;
 }
 
-.eminent-type-container {
-  min-width: 16rem !important;
+@media screen and (min-width: 1233px) {
+  .eminent-container-max-wid {
+    min-width: 13rem !important;
+  }
 }
