--- a/app/javascript/app/modules/eminentHome/pages/fileStatus/fileStatus.scss
+++ b/app/javascript/app/modules/eminentHome/pages/fileStatus/fileStatus.scss
@@ -158,6 +158,9 @@ $whiteColor:#fff;
 .Rejected-tag {
   background:#FF595A !important;
 }
+.Pending-tag {
+  background:#FF595A !important;
+}
 
 .ml-1rem {
   margin-left:1rem;
