--- a/app/javascript/app/modules/eminentHome/pages/fileStatus/fileStatus.scss
+++ b/app/javascript/app/modules/eminentHome/pages/fileStatus/fileStatus.scss
@@ -194,6 +194,9 @@ $whiteColor:#fff;
   font-weight: 600!important;
 }
 
+.data-container {
+  border-radius: 12px 12px 0px 0px;
+}
 
 @media screen and (max-width: 1234px) {
   .eminent-container-max-wid {
