--- a/app/javascript/app/modules/eminentpersonalityhome/component/stepper/stepper.scss
+++ b/app/javascript/app/modules/eminentpersonalityhome/component/stepper/stepper.scss
@@ -17,10 +17,11 @@ $blackcolor:#000;
     }
   }
 }
+
 @mixin btndesign{
   padding: 14px 22px;
   border-radius: 12px;
-  font-size: 18px;
+  font-size: 14px;
   font-weight: 600;
   line-height: normal;
   box-shadow: none;
@@ -82,4 +83,31 @@ mark {
 .css-zpcwqm-MuiStepConnector-root {
   left: calc(-54% + 36px) !important;
   right: calc(46% + 37px) !important;
+}
+
+.mobile-next-btn {
+  font-size: 14px !important;
+  padding: 10px 14px !important;
+}
+
+//.stepperwrap-mobile .css-z7uhs0-MuiStepConnector-line {
+//  border-top: dotted !important;
+//}
+
+.stepperwrap-mobile .MuiSvgIcon-root {
+    height: 1.8rem !important;
+    width: 1.8rem !important;
+}
+.stepperwrap-mobile .MuiSvgIcon-root .css-1hv8oq8-MuiStepLabel-label{
+  display: none;
+}
+
+.stepperwrap-mobile .css-zpcwqm-MuiStepConnector-root {
+  top: 13px!important;
+  width: 30px !important;
+  left: calc(-73% + 36px) !important;
+  right: calc(28% + 37px) !important;
+  border-top: dotted !important;
+  color: lightgray !important;
+  z-index: 100
 }
