--- a/app/javascript/app/modules/eminentpersonalityhome/eminentforms/allfroms.scss
+++ b/app/javascript/app/modules/eminentpersonalityhome/eminentforms/allfroms.scss
@@ -316,6 +316,10 @@ button.cancelbtn{
   padding-left: 1.2rem;
 }
 
+.mobile-fields-mobile-view {
+  width: 100% !important;
+}
+
 .mt--14rem {
   margin-top: -1.4rem;
 }
@@ -740,4 +744,8 @@ margin-bottom: auto;
 
 .section-2-head {
   margin-left: 0.8rem!important;
+}
+
+.detailFrom-mobile .css-mhc70k-MuiGrid-root {
+  margin-left: 0rem;
 }
