'2nd page ui mobile compatible complete'

--- a/app/javascript/app/modules/eminentpersonalityhome/eminentforms/componentOfFIelds.scss
+++ b/app/javascript/app/modules/eminentpersonalityhome/eminentforms/componentOfFIelds.scss
@@ -1,3 +1,7 @@
 .css-z3c6am-MuiFormControl-root-MuiTextField-root {
   width: 100%!important;
 }
+
+//.educationforms-mobile .MuiGrid-item {
+//  padding: 0rem;
+//}
