--- a/app/javascript/app/modules/eminentHome/pages/dailogBox/dailogBox.scss
+++ b/app/javascript/app/modules/eminentHome/pages/dailogBox/dailogBox.scss
@@ -1,5 +1,7 @@
-.list-container {
+.main-dialog-list-container {
   padding-left: 1.3rem;
+  height: 10rem;
+  overflow-y: scroll;
 }
 
 .dialog-list-container {
