login page responsive changes done

--- a/app/javascript/app/modules/eminentlogin/loginpage.scss
+++ b/app/javascript/app/modules/eminentlogin/loginpage.scss
@@ -1,9 +1,4 @@
-//.login-wrap{
-//  position: relative;
-//  display: flex;
-//  flex-direction: column;
-//  min-height: 100vh;
-//}
+
 #app {
 position: relative;
   min-height: 100vh;
@@ -106,6 +101,52 @@ position: relative;
 @media screen and (max-width: 1450px) {
   .login-wrap{
    position: relative;
+  }
+}
+
+@media screen and (max-width: 1366px) {
+  .login-form h2 {
+    font-size: 2rem;
+    margin-bottom: 2rem !important;
+  }
+  .login-form-wrap h4 {
+    font-size: 24px;
+    margin-bottom: 1rem;
+  }
+  .otpBtn, .otpBtn:hover {
+    font-size: 16px;
+    padding: 0.5rem;
+  }
+}
+@media screen and (max-width: 1199px) {
+  .login-form h2 {
+    font-size: 1.5rem;
+    margin-bottom: 1.5rem !important;
+  }
+  .login-form-wrap h4 {
+    font-size: 18px;
+    margin-bottom: 1rem;
+  }
+  .otpBtn, .otpBtn:hover {
+    font-size: 14px;
+    padding: 0.2rem;
+  }
+  input.MuiInputBase-input{
+    font-size: 12px;
+    padding: 10px 10px;
+    margin-top: 0;
+  }
+  .number-filed .css-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input{
+    height: 0.2rem;
+    font-size: 12px;
+  }
+  .number-filed .css-14s5rfu-MuiFormLabel-root-MuiInputLabel-root{
+    top: -12px;
+    font-size: 12px;
+  }
+  .number-filed .css-1jy569b-MuiFormLabel-root-MuiInputLabel-root.Mui-focused, .number-filed .css-1jy569b-MuiFormLabel-root-MuiInputLabel-root {
+    font-size: 12px;
+    top: -3px;
   }
 }
 @media screen and (max-width: 992px) {
