--- a/app/javascript/app/modules/eminentHome/pages/fileStatus/fileStatus.scss
+++ b/app/javascript/app/modules/eminentHome/pages/fileStatus/fileStatus.scss
@@ -130,6 +130,7 @@ $whiteColor:#fff;
   rotate: 180deg;
 }
 
+
 .status-btn {
   width: 1.5rem;
   height: 1.5rem;
@@ -137,14 +138,23 @@ $whiteColor:#fff;
   background: #F4F4F4;
   border-radius: 50%;
   margin-right: 1rem;
-  span {
-    height: 0.75rem;
-    width: 0.75rem;
-    background: red;
-    margin: auto;
-    border-radius: 50%;
-  }
 }
+
+.status-btn span {
+  height: 0.75rem;
+  width: 0.75rem;
+  margin: auto;
+  border-radius: 50%;
+}
+
+.status-btn.red span {
+  background: red;
+}
+
+.status-btn.green span {
+  background: green;
+}
+
 
 .eminent-container {
   border-bottom: 1px solid lightgray;
