--- a/app/javascript/app/modules/eminentpersonalityhome/eminentforms/allfroms.scss
+++ b/app/javascript/app/modules/eminentpersonalityhome/eminentforms/allfroms.scss
@@ -308,7 +308,7 @@ button.cancelbtn{
 }
 
 .mobile-fields {
-  width: 20rem;
+  width: 100%;
   height: 3.1rem;
   border-radius: 13px;
   border: 1px solid grey;
@@ -328,7 +328,8 @@ button.cancelbtn{
 
 .mobile-number-field {
   display: grid;
-  max-width: 20rem;
+  width: 20rem;
+  max-width: 100%;
 }
 
 .mobile-label {
@@ -772,4 +773,7 @@ margin-bottom: auto;
 
 .landline-mobile-view {
   padding-left: 0px !important;
+}
+.designation-label{
+
 }
