Ui changes of form

--- a/app/javascript/app/modules/eminentpersonalityhome/header/header.scss
+++ b/app/javascript/app/modules/eminentpersonalityhome/header/header.scss
@@ -15,7 +15,7 @@
 .bjp-text{
   color: #5A5A61;
   font-family: Poppins;
-  font-size: 200% !important;
+  font-size: 28px;
   font-weight: 500;
 }
 
@@ -63,7 +63,7 @@
 }
 
 .navbar-profile {
-  min-width: 145% !important;
+  min-width: 12rem;
   display: flex;
   border: 0.5px solid lightgray;
   border-radius: 16px;
