Ui changes of form

--- a/app/javascript/app/modules/eminentpersonalityhome/eminentforms/allfroms.scss
+++ b/app/javascript/app/modules/eminentpersonalityhome/eminentforms/allfroms.scss
@@ -625,7 +625,10 @@ button.cancelbtn{
 }
 
 .mt-2rem {
-  margin-top: 2rem;
+  width: 108px;
+  align-items: center;
+  justify-content: center;
+  height: 100px;
 }
 
 .user-image {
