--- a/app/javascript/app/modules/eminentpersonalityhome/eminentforms/allfroms.scss
+++ b/app/javascript/app/modules/eminentpersonalityhome/eminentforms/allfroms.scss
@@ -773,3 +773,17 @@ margin-bottom: auto;
 .landline-mobile-view {
   padding-left: 0px !important;
 }
+
+@media screen and (max-width: 767px) {
+  .main-edu-text {
+    font-size: 0.8rem !important;
+  }
+
+  .mt-2rem {
+    margin-top: 0;
+    width: 108px;
+    align-items: center;
+    justify-content: center;
+    height: 100px;
+  }
+}
