--- a/app/javascript/app/modules/eminentHome/pages/hometable/hometable.scss
+++ b/app/javascript/app/modules/eminentHome/pages/hometable/hometable.scss
@@ -97,6 +97,7 @@ border: solid 1px rgba(0,0,0,0.3);
   font-style: normal;
   font-weight: 500;
   line-height: normal;
+  word-break: break-all;
 }
 
 .text-labels{
